# ROCmForge

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  build.rs  test_inference.rs  test_output_integration.txt  test_output_lib.txt
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
benches/: attention_bench.rs  dequant_bench.rs  inference_bench.rs  matmul_bench.rs  memory_bench.rs  phase12_benchmark.rs
docs/: AGENT_3_BUG_REPORT.md  AGENT_3_COMPREHENSIVE_BUG_REPORT.md  AGENT_3_EXECUTIVE_SUMMARY.md  AGENT_3_FINAL_BUG_REPORT.md  AGENT_3_FINAL_BUG_REPORT_2026-01-06.md  AGENT_3_FIX_CHECKLIST.md  AMD_MXFP_QUANTIZATION_2026-01-20.md  ARCHITECTURE_EXECUTIVE_SUMMARY.md  ARCHITECTURE_MODULARIZATION_ANALYSIS.md  ARCH_DECISION_2026-01-12_GGUF_SHAPE.md  ARCH_DECISION_2026-01-12_OWNERSHIP_BOUNDARIES.md  ARCH_DECISION_2026-01-13_GGML_IR_BACKENDS.md  ARCH_LAW_BASED_GOVERNANCE.md  BUG_DETECTION_AGENT_SUMMARY.md  BUG_FIX_CHRONICLE.md  BUG_FIX_VERIFICATION_2025-01-07.md  BUG_HUNT_BUG_LIST.md  BUG_HUNT_EXECUTIVE_SUMMARY.txt  BUG_HUNT_FIX_CHECKLIST.md  BUG_HUNT_INDEX.md  BUG_HUNT_INDEX_2026-01-07.md  BUG_HUNT_QUICKSUMMARY.md  BUG_HUNT_QUICKSUMMARY_2026-01-07.txt  BUG_HUNT_REPORT.md  BUG_HUNT_REPORT_2026-01-06.md  BUG_MXFP_FIXED_IMPLEMENTATION_REPORT.md  BUG_REPORT_EXECUTIVE_SUMMARY.md  BUG_STATUS_MATRIX.md  CHANGELOG.md  CLI_AND_MODEL_LOADING_ANALYSIS.md  CLI_API_DRIFT_ANALYSIS_2026-01-11.md  CLI_API_DRIFT_ANALYSIS_FRESH_2026-01-11.md  CLI_BUG_ANALYSIS_2026-01-11.md  CLI_BUG_ANALYSIS_FRESH_2026-01-11.md  CLI_CODE_DRIFT_ANALYSIS_2026-01-11.md  CLI_CODE_DRIFT_ANALYSIS_FRESH_2026-01-11.md  CLI_FIX_IMPLEMENTATION_2026-01-11.md  CLI_FIX_SUMMARY_2026-01-11.md  CLI_REFERENCE.md  CODEBASE_AUDIT_REPORT_2026-01-06.md  (+106 more)
kernels/: flash_attention.hip  flash_attention_causal.hip  flash_attention_nocausal.hip  fused_dequant_rmsnorm.hip  mxfp_dequant.hip  position_embeddings.hip  q2_k_dequant.hip  q4_0_dequant.hip  q4_0_matmul.hip  q4_k_dequant.hip  q4_k_matmul.hip  q6_k_dequant.hip  q6_k_matmul.hip  topk_sampling.hip  topk_topp_sampling.hip  topp_sampling.hip  transpose.hip
scripts/: cleanup_code.sh
src/: engine.rs  error.rs  hip_backend_debug_tests.rs  hip_isolation_test.rs  lib.rs  metrics.rs  models.rs  tokenizer.rs
src/attention/: backend.rs  backend_registry.rs  causal_mask_tests.rs  cpu.rs  flash_attention.rs  flash_attention_tests.rs  flash_causal_tests.rs  flash_nocausal_tests.rs  gpu.rs  kernel_tests.rs  kernels.rs  mod.rs  mqa_kernel_tests.rs  multi_query.rs  paged_kernel.rs  paged_tests.rs  qkt_matmul_tests.rs  rope.rs  rope_gpu_tests.rs  softmax_explicit_tests.rs  weighted_matmul_tests.rs
src/backend/: gpu_executor.rs  gpu_test_common.rs  hip_backend.rs  mod.rs  scratch.rs
src/context/: mod.rs
src/engine/: config.rs  inference.rs  mod.rs  stats.rs  types.rs
src/ggml/: allocator.rs  backend.rs  cpu_backend.rs  dummy_backend.rs  executor.rs  graph.rs  hybrid_scheduler.rs  layout.rs  mod.rs  op.rs  optimizer.rs  shape.rs  tensor.rs  validate.rs
src/http/: context_handlers.rs  handlers.rs  mod.rs  routes.rs  server.rs  types.rs
src/kernels/: mod.rs
src/kv_cache/: block_ops.rs  blocks.rs  cache_ops.rs  config.rs  kv_cache.rs  mod.rs  page_table.rs  pages.rs  sequence_ops.rs  types.rs
src/loader/: dequant.rs  gguf.rs  gguf_loader.rs  gguf_tensor.rs  lazy_tensor.rs  metadata.rs  mmap.rs  mmap_loader.rs  mod.rs  mxfp_tests.rs  onnx_loader.rs  tensor_type.rs
src/logging/: mod.rs
src/memory/: arena.rs  calculator.rs  mod.rs
src/mlp/: gpu_path_regression_tests.rs  kernels.rs  mod.rs  rms_norm_tests.rs  swiglu_tests.rs
src/model/: config_tests.rs  execution_plan.rs  glm_position.rs  gpu_attention_integration_tests.rs  kv_cache.rs  lazy_tests.rs  mod.rs  phase5_paged_tests.rs  position_embedding_tests.rs  simple_transformer.rs
src/ops/: attention_gpu.rs  causal_mask_tests.rs  mod.rs
src/profiling/: baseline.rs  baseline_storage.rs  baseline_types.rs  kernel_launch.rs  kernel_timer.rs  mod.rs  omniperf.rs  rocprof.rs  ttft.rs  (+2 more)
tests/: README_E2E_TESTS.md  attention_device_tensor_tests.rs  attention_gpu_accuracy_tests.rs  attention_gpu_tests.rs  attention_tests.rs  debug_hip_backend.rs  decode_step_integration_tests.rs  device_tensor_mmap_tests.rs  e2e_inference_tests.rs  e2e_suite.rs  edge_case_tests.rs  embedding_to_lmhead_tests.rs  engine_crash_test.rs  execution_plan_and_decode_tests.rs  execution_plan_construction_tests.rs  execution_plan_forward_pass_tests.rs  execution_plan_weight_mapping_tests.rs  gguf_compatibility_matrix.rs  gguf_loader_structural_tests.rs  gguf_loader_tests.rs  glm_model_tests.rs  hip_backend_smoke_tests.rs  hip_backend_sync_tests.rs  hip_blas_matmul_tests.rs  hip_buffer_invariant_tests.rs  hybrid_scheduler_tests.rs  inference_loop_spawn_race_condition_test.rs  kv_cache_and_scratch_tests.rs  kv_cache_tests.rs  loader_tests.proptest-regressions  loader_tests.rs  mlp_validation_tests.rs  mmap_loader_tests.rs  model_runtime_tests.rs  multilayer_pipeline_tests.rs  phase6_integration_decode_loop.rs  phase6_integration_model_loading.rs  phase6_integration_single_token.rs  q_dequant_tests.rs  sampling_gpu_tests.rs  (+6 more)
(+276 files in other folders)
