[package]
name = "rocmforge"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"  # Required for stable std::simd
authors = ["ROCmForge Team"]
description = "AMD GPU inference engine for LLMs"
license = "MIT"

[dependencies]
# HIP/ROCm bindings (placeholder crates for now)
# hip = { version = "0.1", features = ["v5"] }
# hip-sys = "0.1"

# HTTP server
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
axum-test = "15.0"
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
reqwest-eventsource = "0.4"
tokenizers = { version = "0.15", features = ["http"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Math and linear algebra
half = { version = "2.4", features = ["serde"] }
num-traits = "0.2"
rand = "0.8"
rand_chacha = "0.3"
once_cell = "1.18"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async utilities
futures = "0.3"
async-stream = "0.3"

# File I/O and compression
byteorder = "1.5"
flate2 = "1.0"

# Memory mapping and safe casting
memmap2 = "0.9"
bytemuck = { version = "1.15", features = ["derive"] }

# Parallel processing (for async GPU loading)
rayon = "1.10"

# ONNX Runtime with ROCm support (placeholder for now)
# ort = { version = "2.0", features = ["rocm"] }

# Memory management (placeholder for now)
# cudarc = { version = "0.11", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
tempfile = "3.8"
mockall = "0.12"
serial_test = "3.0"

[build-dependencies]
cc = "1.0"

# Benchmarks
[[bench]]
name = "phase12_benchmark"
harness = false

# Binaries
[[bin]]
name = "inspect_gguf"
path = "src/bin/inspect_gguf.rs"

[[bin]]
name = "test_inference"
path = "test_inference.rs"

[features]
default = []
rocm = []
# Enable SIMD CPU backend (requires nightly Rust)
simd = []
# cuda = ["cudarc"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
