[package]
name = "rocmforge"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"  # Required for stable std::simd
authors = ["ROCmForge Team"]
description = "AMD GPU inference engine for LLMs"
license = "MIT"

[dependencies]
# HIP/ROCm bindings (placeholder crates for now)
# hip = { version = "0.1", features = ["v5"] }
# hip-sys = "0.1"

# Context engine (feature-gated)
sqlitegraph = { version = "1.0", optional = true }

# HTTP server
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
axum-test = "15.0"
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
reqwest-eventsource = "0.4"
tokenizers = { version = "0.15", features = ["http"] }

# Prometheus metrics
prometheus-client = "0.22"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Math and linear algebra
half = { version = "2.4", features = ["serde"] }
num-traits = "0.2"
rand = "0.8"
rand_chacha = "0.3"
once_cell = "1.18"
hex = "0.4"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Async utilities
futures = "0.3"
async-stream = "0.3"

# File I/O and compression
byteorder = "1.5"
flate2 = "1.0"

# Memory mapping and safe casting
memmap2 = "0.9"
bytemuck = { version = "1.15", features = ["derive"] }

# Parallel processing (for async GPU loading)
rayon = "1.10"

# CPU feature detection for runtime SIMD dispatch
raw-cpuid = "11"

# ONNX Runtime with ROCm support (placeholder for now)
# ort = { version = "2.0", features = ["rocm"] }

# Memory management (placeholder for now)
# cudarc = { version = "0.11", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
tempfile = "3.8"
mockall = "0.12"
serial_test = "3.0"
memoffset = "0.9"

[build-dependencies]
cc = "1.0"
bindgen = "0.70"

# Benchmarks
[[bench]]
name = "phase12_benchmark"
harness = false

[[bench]]
name = "attention_bench"
harness = false

[[bench]]
name = "matmul_bench"
harness = false

[[bench]]
name = "dequant_bench"
harness = false

[[bench]]
name = "inference_bench"
harness = false

[[bench]]
name = "memory_bench"
harness = false

# Binaries
[[bin]]
name = "inspect_gguf"
path = "src/bin/inspect_gguf.rs"

[[bin]]
name = "test_inference"
path = "test_inference.rs"

[[bin]]
name = "run_simple_model"
path = "src/bin/run_simple_model.rs"

[[bin]]
name = "test_qwen"
path = "src/bin/test_qwen.rs"

[features]
# ROCm/HIP is always-on for ROCmForge - AMD GPU inference engine
# SIMD is opt-in (requires nightly Rust for portable_simd)
default = []
# Enable SIMD CPU backend (requires nightly Rust)
simd = []
# Enable AVX-512 code paths (opt-in due to CPU throttling concerns)
avx512 = ["simd"]
# Enable context engine with SQLiteGraph
context = ["sqlitegraph"]
# cuda = ["cudarc"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
